--- a/openshift/argocd/base/argocd-clusterrolebinding.yaml
+++ b/openshift/argocd/base/argocd-clusterrolebinding.yaml
@@ -1,11 +1,11 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: argocd-application-controller-cluster-admin
+  name: argocd-cluster-argocd-application-controller-cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: argocd-application-controller
-    namespace: argocd
+    name: argocd-cluster-argocd-application-controller
+    namespace: openshift-gitops
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
