--- a/openshift/argocd/base/argocd.yaml
+++ b/openshift/argocd/base/argocd.yaml
@@ -1,22 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ArgoCD
 metadata:
-  name: argocd
-  namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource
+  name: argocd-cluster
+  namespace: openshift-gitops
 spec:
-  dex:
-    image: ghcr.io/dexidp/dex
-    openShiftOAuth: true
-    version: v2.27.0
-  image: argoproj/argocd
   rbac:
     defaultPolicy: "role:admin"
-  redis:
-    image: redis
-    version: 5.0.10-alpine
   server:
     route:
       enabled: true
-  version: v1.8.2
+  resourceCustomizations: |
+    route.openshift.io/Route:
+      ignoreDifferences: |
+        jsonPointers:
+        - /spec/host
+    apps/Deployment:
+      ignoreDifferences: |
+        jsonPointers:
+        - /spec/template/spec/containers/0/image
