--- a/openshift/argocd/base/kustomization.yaml
+++ b/openshift/argocd/base/kustomization.yaml
@@ -1,9 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: argocd
-
 resources:
-  - argocd-gpg-keys-cm.yaml
   - argocd.yaml
+  - argocd-setup-job.yaml
   - argocd-clusterrolebinding.yaml
