--- a/openshift/gitops/manifests/configs/catalogsources/base/kustomization.yaml
+++ b/openshift/gitops/manifests/configs/catalogsources/base/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: openshift-operators
+namespace: openshift-marketplace
 
 resources:
-  - argocd-subscription.yaml
+  - redhatgov-catalogsource.yaml
