--- a/openshift/gitops/manifests/configs/sealed-secrets/base/kustomization.yaml
+++ b/openshift/gitops/manifests/configs/sealed-secrets/base/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: openshift-operators
-
 resources:
-  - argocd-subscription.yaml
+  - sealed-secrets.yaml
