--- a/openshift/gitops/environments/overlays/configs/kustomization.yaml
+++ b/openshift/gitops/environments/overlays/configs/kustomization.yaml
@@ -8,3 +8,5 @@ bases:
   - ../../../manifests/argocd/apps/catalogsources/base
   - ../../../manifests/argocd/apps/rbac/base
   - ../../../manifests/argocd/apps/sealed-secrets/base
+  - ../../../manifests/argocd/apps/user-workload-monitoring/base
+  - ../../../manifests/argocd/apps/cnv/base
