--- a/openshift/gitops/manifests/argocd/apps/cnv/base/kustomization.yaml
+++ b/openshift/gitops/manifests/argocd/apps/cnv/base/kustomization.yaml
@@ -2,5 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - cluster-monitoring-config.yaml
-  - user-workload-monitoring-config.yaml
+  - cnv-app.yaml
