Updating CNV deployment.

--- a/openshift/gitops/manifests/argocd/apps/user-workload-monitoring/base/user-workload-monitoring-app.yaml
+++ b/openshift/gitops/manifests/argocd/apps/user-workload-monitoring/base/user-workload-monitoring-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cnv
+  name: user-workload-monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "1"
     argocd.argoproj.io/compare-options: IgnoreExtraneous
