--- a/openshift/gitops/clusters/overlays/rhpds/argocd/configs/kustomization.yaml
+++ b/openshift/gitops/clusters/overlays/rhpds/argocd/configs/kustomization.yaml
@@ -11,3 +11,9 @@ patches:
       kind: Application
       name: auth
     path: auth-app-patch.yaml
+  - target:
+      group: argoproj.io
+      version: v1alpha1
+      kind: Application
+      name: cnv
+    path: cnv-app-patch.yaml
