Adding image-builder VM.

--- a/openshift/gitops/environments/overlays/rfe/kustomization.yaml
+++ b/openshift/gitops/environments/overlays/rfe/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 bases:
   - ../../../manifests/rfe/httpd/base
   - ../../../manifests/rfe/nexus/base
+  - ../../../manifests/rfe/image-builder-vm/base
 
 resources:
   - rfe-namespace.yaml
