--- a/ansible/collections/requirements.yaml
+++ b/ansible/collections/requirements.yaml
@@ -3,3 +3,5 @@ collections:
     source: https://galaxy.ansible.com
   - name: ansible.posix
     source: https://galaxy.ansible.com
+  - name: community.kubernetes
+    source: https://galaxy.ansible.com
