RFE Automation RBAC

--- a/openshift/gitops/environments/overlays/rfe/kustomization.yaml
+++ b/openshift/gitops/environments/overlays/rfe/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
   - ../../../manifests/rfe/httpd/base
   - ../../../manifests/rfe/nexus/base
   - ../../../manifests/rfe/image-builder-vm/base
+  - ../../../manifests/rfe/rbac/base
 
 resources:
   - rfe-namespace.yaml
