--- a/ansible/roles/openshift-vm-imi/tasks/main.yaml
+++ b/ansible/roles/openshift-vm-imi/tasks/main.yaml
@@ -1,12 +1,13 @@
 - name: Query VirtualMachineInstances
   community.kubernetes.k8s_info:
-    username: "{{ openshift_ansible_sa }}"
-    api_key: "{{ openshift_ansible_sa_token }}"
-    host: "{{ openshift_api }}"
+    api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
     api_version: kubevirt.io/v1alpha3
+    ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    host: https://kubernetes.default.svc
     kind: VirtualMachineInstance
-    namespace: "{{ image_builder_namespace }}"
-    validate_certs: no
+    namespace: rfe
+    username: rfe-automation
+    validate_certs: yes
   register: vmi_results
 
 - name: Debug vmi_results
@@ -17,7 +18,7 @@
 
 - name: Generate In-Memory Inventory of All VMs
   ansible.builtin.add_host:
-    hostname: "{{ item.spec.hostname }}"
     ansible_ssh_host: "{{ item.status.interfaces[0].ipAddress }}"
     ansible_ssh_port: "22"
+    hostname: "{{ item.spec.hostname }}"
   loop: "{{ vmi_results.resources }}"
