--- a/openshift/gitops/manifests/rfe/nexus/base/nexus.yaml
+++ b/openshift/gitops/manifests/rfe/nexus/base/nexus.yaml
@@ -18,6 +18,10 @@ spec:
         - thomasphall
         - samueltauil
         - nasx
+        - raedrizk
+        - stephennimmo
+        - jarcher
+        - andrewwiththeredhat
     resources:
       cpu:
         request: 500m
