--- a/containers/ansible/ansible-rfe-buildconfig.yml
+++ b/containers/ansible/ansible-rfe-buildconfig.yml
@@ -6,26 +6,7 @@ spec:
   runPolicy: "Serial" 
   source:
     type: Dockerfile
-    dockerfile: |
-      FROM registry.access.redhat.com/ubi8/python-38
-      
-      #set to root user
-      USER 0
-      
-      #update the repos
-      RUN dnf update -y
-      
-      #upgrade pip
-      RUN pip install --upgrade pip
-      
-      #install openshift libraries for pip
-      RUN pip install openshift
-      
-      #install ansible 2.9
-      RUN pip install ansible==2.9.*
-      
-      #reset user to default
-      USER 1001
+    dockerfile: "FROM registry.access.redhat.com/ubi8/python-38\nUSER 0\nRUN dnf update -y\nRUN pip install --upgrade pip\nRUN pip install openshift\nRUN pip install ansible==2.9.*\nUSER 1001"
   strategy:
     type: Docker
     dockerstrategy:
