--- a/containers/ansible/ansible-rfe-imagestream.yml
+++ b/containers/ansible/ansible-rfe-imagestream.yml
@@ -1,6 +1,6 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: ansible-rfe-build
+  name: ansible-rfe
   namespace: rfe-ansible
 spec: {}
