--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-build.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-build.yaml
@@ -31,6 +31,8 @@ spec:
       from:
         kind: DockerImage
         name: registry.access.redhat.com/ubi8/python-38
+  triggers:
+    - type: ConfigChange
   output: 
     to:
       kind: "ImageStreamTag"
