--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-imagestream.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-imagestream.yaml
@@ -2,5 +2,5 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: ansible-rfe
-  namespace: rfe-ansible
+  namespace: rfe
 spec: {}
