editing docker run commands

--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-build.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-build.yaml
@@ -15,11 +15,11 @@ spec:
       USER 0
       
       #run base image update
-      RUN dnf update -y \n
-          pip install --upgrade pip \n
-          pip install openshift \n
-          pip install ansible==2.9.* \n
-          USER 1001 \n
+      RUN dnf update -y && \
+          pip install --upgrade pip && \
+          pip install openshift && \
+          pip install ansible==2.9.* a && \
+          USER 1001
           
   strategy:
     type: Docker
