--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-imagestream.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-imagestream.yaml
@@ -1,6 +1,6 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: ansible-rfe
+  name: ansible-rfe-runner
   namespace: rfe
 spec: {}
