adding runner to resources

--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: rfe
 
 resources:
-  - ansible-rfe-imagestream.yaml
+  - ansible-rfe-runner-imagestream.yaml
   - ansible-rfe-runner-buildconfig.yaml
