--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
@@ -26,7 +26,7 @@ spec:
           
   strategy:
     type: Docker
-    dockerstrategy:
+    dockerStrategy:
       from:
         kind: DockerImage
         name: registry.access.redhat.com/ubi8/python-38
