--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
@@ -8,20 +8,13 @@ spec:
   source:
     type: Dockerfile
     dockerfile: |
-    
-      #pull ubi python image
       FROM registry.access.redhat.com/ubi8/python-38
-      
-      #set user to root
       USER 0
-      
-      #run base image update, pip upgrade, pip openshift libraries, install ansible 2.9.x
       RUN dnf update -y && \
           pip install --upgrade pip && \
           pip install openshift && \
+          pip install jmespath && \
           pip install ansible==2.9.*
-      
-      #set user to default
       USER 1001
           
   strategy:
