--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/kustomization.yaml
@@ -6,3 +6,4 @@ namespace: rfe
 resources:
   - image-builder-vm.yaml
   - image-builder-ssh-key-sealed-secret.yaml
+  - image-builder-vm-ansible-job.yaml
