Added ansible build/upload assets

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
-retry_files_enabled = False
+roles_path=roles
+collections_paths=collections
+
 host_key_checking = False
+retry_files_enabled = False
+callback_whitelist = profile_tasks
