Adding portal credentials secret.

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: rfe
 
 resources:
+  - redhat-portal-credentials-sealed-secret.yaml
   - image-builder-vm.yaml
   - image-builder-ssh-key-sealed-secret.yaml
   - image-builder-vm-ansible-job.yaml
