s/-i/--private-key. Changing paths for secrets to /var/secrets

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
@@ -20,7 +20,7 @@ spec:
             - name: GIT_URL
               value: "https://github.com/redhat-cop/rhel-edge-automation-arch.git"
             - name: SSH_KEY
-              value: "/root/.ssh/image-builder-ssh-key/ssh-privatekey"
+              value: "/var/secrets/image-builder-ssh-key/ssh-privatekey"
             - name: ANSIBLE_PLAYBOOK
               value: "ansible/playbooks/configure-image-builder.yaml"
           command:
@@ -30,13 +30,13 @@ spec:
               mkdir -p $GIT_DIRECTORY
               git clone $GIT_URL $GIT_DIRECTORY
               ansible-galaxy collection install -f $GIT_DIRECTORY/ansible/collections/requirements.yaml
-              ansible-playbook -i $SSH_KEY $GIT_DIRECTORY/$ANSIBLE_PLAYBOOK
+              ansible-playbook --private-key $SSH_KEY $GIT_DIRECTORY/$ANSIBLE_PLAYBOOK
           volumeMounts:
             - name: image-builder-ssh-key
-              mountPath: /root/.ssh/image-builder-ssh-key
+              mountPath: /var/secrets/image-builder-ssh-key
               readOnly: yes
             - name: redhat-portal-credentials
-              mountPath: /root/redhat-portal-credentials
+              mountPath: /var/secrets/redhat-portal-credentials
               readOnly: yes
           imagePullPolicy: IfNotPresent
           name: ansible-rfe-runner
