Updating parameters for ansible-{galaxy,playbook}.

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
@@ -29,8 +29,8 @@ spec:
             - |
               mkdir -p $GIT_DIRECTORY
               git clone $GIT_URL $GIT_DIRECTORY
-              ansible-galaxy collection install -f $GIT_DIRECTORY/ansible/collections/requirements.yaml
-              ansible-playbook --private-key $SSH_KEY $GIT_DIRECTORY/$ANSIBLE_PLAYBOOK
+              ansible-galaxy collection install -r $GIT_DIRECTORY/ansible/collections/requirements.yaml
+              ansible-playbook -u cloud-user --private-key=$SSH_KEY $GIT_DIRECTORY/$ANSIBLE_PLAYBOOK
           volumeMounts:
             - name: image-builder-ssh-key
               mountPath: /var/secrets/image-builder-ssh-key
