Changing imagePullPolicy for VM job. Adding netaddr to ansible-rfe-runner container.

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
@@ -38,7 +38,7 @@ spec:
             - name: redhat-portal-credentials
               mountPath: /var/secrets/redhat-portal-credentials
               readOnly: yes
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: ansible-rfe-runner
       volumes:
         - name: image-builder-ssh-key
