--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
@@ -14,6 +14,7 @@ spec:
           pip install --upgrade pip && \
           pip install openshift && \
           pip install jmespath && \
+          pip install netaddr && \
           pip install ansible==2.9.*
       USER 1001
           
