--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
@@ -15,9 +15,12 @@ spec:
           pip install openshift && \
           pip install jmespath && \
           pip install netaddr && \
-          pip install ansible==2.9.*
+          pip install ansible==2.9.* && \
+          curl -L https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz | \
+            tar -xvzf - -C /usr/local/bin/ oc && chmod 755 /usr/local/bin/oc && ln -s /usr/local/bin/oc /usr/local/bin/kubectl
+
       USER 1001
-          
+
   strategy:
     type: Docker
     dockerStrategy:
@@ -26,7 +29,7 @@ spec:
         name: registry.access.redhat.com/ubi8/python-38
   triggers:
     - type: ConfigChange
-  output: 
+  output:
     to:
       kind: ImageStreamTag
       name: ansible-rfe-runner:latest
