Adding ansible.cfg +location, setting secret mode to 0400.

--- a/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
+++ b/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
@@ -18,7 +18,7 @@
 
 - name: Debug vmi_results
   ansible.builtin.debug:
-    msg: "{{ image-builder - {{ vmi_results.resources[0].status.interfaces[0].ipAddress }}"
+    msg: "image-builder - {{ vmi_results.resources[0].status.interfaces[0].ipAddress }}"
     verbosity: 1
 
 - name: Generate In-Memory Inventory of Image Builder VM
