--- a/openshift/gitops/environments/overlays/rfe/kustomization.yaml
+++ b/openshift/gitops/environments/overlays/rfe/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
   - ../../../manifests/rfe/image-builder-vm/base
   - ../../../manifests/rfe/rbac/base
   - ../../../manifests/rfe/ansible-rfe-runner/base
+  - ../../../manifests/rfe/pipelines/base
 
 resources:
   - rfe-namespace.yaml
