Adding RHEL image download job.

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: rfe
 
 resources:
   - redhat-portal-credentials-sealed-secret.yaml
-  - image-builder-vm.yaml
   - image-builder-ssh-key-sealed-secret.yaml
+  - rhel-image-download-ansible-job.yaml
   - image-builder-vm-ansible-job.yaml
+  - image-builder-vm.yaml
