Moving cnv sealed secrets from manifests to shared overlay.

--- a/openshift/gitops/clusters/overlays/shared/configs/cnv/kustomization.yaml
+++ b/openshift/gitops/clusters/overlays/shared/configs/cnv/kustomization.yaml
@@ -6,3 +6,5 @@ bases:
 
 resources:
   - kubevirt-config-configmap.yaml
+  - image-builder-ssh-key-sealed-secret.yaml
+  - redhat-portal-credentials-sealed-secret.yaml 
