--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -27,3 +27,10 @@ rules:
     verbs:
       - get
       - list
+  - apiGroups:
+      - route.openshift.io
+    resources:
+      - routes
+    verbs:
+      - get
+      - list
