Adding iso-generator roles/playbooks. Updating image builder VM storage/packages.

--- a/ansible/roles/image-builder/tasks/main.yaml
+++ b/ansible/roles/image-builder/tasks/main.yaml
@@ -22,6 +22,8 @@
       - cockpit-composer
       - bash-completion
       - firewalld
+      - genisoimage
+      - syslinux
 
 - name: Enable Cockpit/Composer/Firewalld
   ansible.builtin.systemd:
