--- a/ansible/playbooks/redhat-image-downloader.yaml
+++ b/ansible/playbooks/redhat-image-downloader.yaml
@@ -3,7 +3,7 @@
   roles:
     - role: openshift-httpd-pod-imi
 
-- name: Download RHEL KVM Image
+- name: Download Red Hat Images
   hosts: httpd_pod_group
   roles:
-    - role: download-rhel-kvm-image
+    - role: redhat-image-downloader
