--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm.yaml
@@ -28,7 +28,7 @@ spec:
           volumeMode: Filesystem
         source:
           http:
-            url: 'http://httpd:8080/qcow/rhel-8.3-x86_64-kvm.qcow2'
+            url: 'http://httpd:8080/images/rhel-8.3-x86_64-kvm.qcow2'
   running: true
   template:
     metadata:
